--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -2,16 +2,30 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
+  justify-content: space-around;
+  margin-left: 15vw;
   width: 85vw;
   color: #7fdbca;
   background-color: #021627;
 }
 
+.intro-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.main-title {
+  display: flex;
+  flex-direction: row;
+}
+
 .profile-image {
   background-image: url("../docs/mac-profile-image.png");
   background-size: cover;
+  margin-right: 20px;
   height: 200px;
   width: 200px;
 }
@@ -20,6 +34,106 @@
   background-image: url("../docs/hello-profile-image.png");
 }
 
+.profile-description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
+  position: relative;
+  border: solid;
+  border-radius: 10px;
+}
+
 #first-name {
   color: #db7f90;
+}
+
+.arrow {
+  margin-top: 25%;
+  margin-bottom: -25%;
+}
+.bounce {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+.profile-stack {
+  height: 100vh;
+}
+
+.stack-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+h2#stack-title {
+  margin-left: 10px;
+}
+
+.languages {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.frameworks-libraries {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.testing {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.databases-systems {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#stack-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 90px;
+  width: 110px;
+  padding: 5px;
+  margin: 10px;
+  border: solid;
+  border-color: #e5e5e5;
+  border-radius: 10px;
+  border-width: 2px;
+  font-size: small;
+}
+
+#stack-icon:hover {
+  color: #db7f90;
+  border-color: #db7f90;
+}
+
+#stack-name {
+  margin: 10px;
+  margin-bottom: 0;
 }
