--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -3,9 +3,11 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  position: fixed;
   height: 100vh;
   width: 15vw;
   border-right: solid;
+  border-width: 1px;
   color: #7fdbca;
   background-color: #021627;
 }
@@ -32,7 +34,7 @@ a#section-links:after {
   position: absolute;
   width: 100%;
   transform: scaleX(0);
-  height: 2px;
+  height: 1px;
   bottom: 0;
   left: 0;
   background-color: #db7f90;
