--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -10,6 +10,7 @@
   border-width: 1px;
   color: #7fdbca;
   background-color: #021627;
+  font-family: "Raleway", sans-serif;
 }
 
 .navbar-section {
