--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -77,13 +77,13 @@ a#icon-links:hover {
 @media screen and (max-width: 700px) {
   .navbar-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
     position: fixed;
-    height: 15vh;
+    height: 10vh;
     width: 100vw;
-    border-right: solid;
+    border-bottom: solid;
     border-width: 1px;
     color: #7fdbca;
     background-color: #021627;
@@ -93,6 +93,7 @@ a#icon-links:hover {
   .navbar-section {
     display: flex;
     flex-direction: row;
+    align-items: center;
   }
 
   #section-title {
